# todo-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml
app/: config.py  database.py  main.py  sse.py
app/auth/: __init__.py  dependencies.py  router.py  service.py
app/models/: __init__.py  models.py
app/routers/: __init__.py  areas.py  dashboard.py  donor_tasks.py  inbox.py  next_actions.py  projects.py  review.py  someday_maybe.py  tags.py  tickler.py
app/schemas/: __init__.py  schemas.py
app/services/: donor_client.py
tests/: conftest.py  test_auth.py  test_dashboard.py  test_docs.py  test_docs_auth.py  test_donor_tasks.py  test_inbox.py  test_next_actions.py  test_projects.py  test_someday_maybe.py  test_sse.py  test_tickler.py
